[package]
name = "dap-types"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jDomantas/dap-types"
description = "Type definitions for debugger adapter protocol."

[dependencies]
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
